--- a/Face_Emotion_Recognition.ipynb
+++ b/Face_Emotion_Recognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Face Emotion Recognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO+REOOOi6CFyCMZ7+VD3+J",
+      "authorship_tag": "ABX9TyPjPwvuLQgC1gHZfAneqC+P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U2bDMa-Vyw-q",
-        "outputId": "a938d93f-b3df-4623-b509-bf9b06245972"
+        "outputId": "f2e54755-bd70-43e4-ecd8-35fdfffba95f"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y-iXEpxaz2Qu",
-        "outputId": "32bcb162-f22b-4947-f2eb-38733d37cde2"
+        "outputId": "978ca0e5-22b9-471b-e331-751bd869704c"
       },
       "execution_count": 2,
       "outputs": [
@@ -69,29 +69,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-05-24 11:25:18--  https://www.dropbox.com/s/si11cws2pyho1bp/archive.zip\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.80.18, 2620:100:6017:18::a27d:212\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.80.18|:443... connected.\n",
+            "--2022-05-25 02:22:32--  https://www.dropbox.com/s/si11cws2pyho1bp/archive.zip\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.9.18, 2620:100:601b:18::a27d:812\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.9.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: /s/raw/si11cws2pyho1bp/archive.zip [following]\n",
-            "--2022-05-24 11:25:18--  https://www.dropbox.com/s/raw/si11cws2pyho1bp/archive.zip\n",
+            "--2022-05-25 02:22:32--  https://www.dropbox.com/s/raw/si11cws2pyho1bp/archive.zip\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com/cd/0/inline/Bl0dEBAnHvLnAN4kOFetcanL9P3_jF1_nRSY_GVh5Hn90zE1KlcKffPVCwSX-3YgDvXN7mPdrwcswx7atT5TUTCSyXefg4UCCybIRqP90nu6E-M2da3cQWwVnj88bJPVfqLA-OxCCUbFCZefSVEtZ33X0G4LkjzKLH23G1xqmRgm9Q/file# [following]\n",
-            "--2022-05-24 11:25:19--  https://uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com/cd/0/inline/Bl0dEBAnHvLnAN4kOFetcanL9P3_jF1_nRSY_GVh5Hn90zE1KlcKffPVCwSX-3YgDvXN7mPdrwcswx7atT5TUTCSyXefg4UCCybIRqP90nu6E-M2da3cQWwVnj88bJPVfqLA-OxCCUbFCZefSVEtZ33X0G4LkjzKLH23G1xqmRgm9Q/file\n",
-            "Resolving uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com (uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com)... 162.125.85.15, 2620:100:6017:15::a27d:20f\n",
-            "Connecting to uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com (uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com)|162.125.85.15|:443... connected.\n",
+            "Location: https://uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com/cd/0/inline/Bl5xu9VY1Yr8eDGWKTqhCjI6xJV2g2_3Im3ZIBlz4tWMATSSxP8fS9j2Q9wNiwhBOgJ7hqsxOWl_GudDBRtwUWlhlLlmXbiCw_5G4LRWP76gfFCUvr_bP5Bb6afSo23kVN-8DDF1TDDMP65dJ8PeWoK5WQJie5TYn0621IhsgROIUg/file# [following]\n",
+            "--2022-05-25 02:22:32--  https://uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com/cd/0/inline/Bl5xu9VY1Yr8eDGWKTqhCjI6xJV2g2_3Im3ZIBlz4tWMATSSxP8fS9j2Q9wNiwhBOgJ7hqsxOWl_GudDBRtwUWlhlLlmXbiCw_5G4LRWP76gfFCUvr_bP5Bb6afSo23kVN-8DDF1TDDMP65dJ8PeWoK5WQJie5TYn0621IhsgROIUg/file\n",
+            "Resolving uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com (uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com)... 162.125.8.15, 2620:100:601b:15::a27d:80f\n",
+            "Connecting to uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com (uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com)|162.125.8.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: /cd/0/inline2/Bl3Y1M7UzsuFp_y9wj7z8sFtDPeayXO8hXraf14V_f4fN9Kgvtq-HJ5djgk9OPuCJinNX0Z77ffAIxbJYueiA6_NV-kr9I9VFsiT0WYtZVusabGakawz0FU7a37NfrTzTefxEYWb3QTgQ7YuncmTRss6s-8a55vJodpjGX4a2_uBVW9lcqV-R4oPv0xO91BCzH-hOZMoBi7cm9WzWPjbAEyxhQy3lMk-gQI-exuOzqdKDDdWBIJVZBUz_FGsxqzix8iKhXsgl2_DKh0XZjZsx-MsiQMz45zgmYnxYQrQvkOcH4ctihwc2WxigwXRBaPa5Q4vOzbn6HyMBJDQZ54CMSsWjYYlTn5fBCCPLHDShYnyGA5vRkMRE19LhYpGkmwnoWqHgDghM55SRZOGUd_a6JE_GT7RnP4D4GFHAIyc0WuB3Q/file [following]\n",
-            "--2022-05-24 11:25:19--  https://uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com/cd/0/inline2/Bl3Y1M7UzsuFp_y9wj7z8sFtDPeayXO8hXraf14V_f4fN9Kgvtq-HJ5djgk9OPuCJinNX0Z77ffAIxbJYueiA6_NV-kr9I9VFsiT0WYtZVusabGakawz0FU7a37NfrTzTefxEYWb3QTgQ7YuncmTRss6s-8a55vJodpjGX4a2_uBVW9lcqV-R4oPv0xO91BCzH-hOZMoBi7cm9WzWPjbAEyxhQy3lMk-gQI-exuOzqdKDDdWBIJVZBUz_FGsxqzix8iKhXsgl2_DKh0XZjZsx-MsiQMz45zgmYnxYQrQvkOcH4ctihwc2WxigwXRBaPa5Q4vOzbn6HyMBJDQZ54CMSsWjYYlTn5fBCCPLHDShYnyGA5vRkMRE19LhYpGkmwnoWqHgDghM55SRZOGUd_a6JE_GT7RnP4D4GFHAIyc0WuB3Q/file\n",
-            "Reusing existing connection to uc37ab4d6fb93d24547e1651ffe5.dl.dropboxusercontent.com:443.\n",
+            "Location: /cd/0/inline2/Bl5vIMbLD2rinnzXnjQVzDPdpEJwzvEddrb05EJH6FyWTgk2LkNxB_XU2G6bwcFg_HAiiAJX2R38bRSIxa62pjEBRtUMSJfctn9UauXff01ZwA6GJhv0tfLWyEvB1SENsxa47IgMpdL8WbBRyJ8WDwWKMyfJaxPwYFk5f9CHv9N8eVcyzJGl4TR22_3lCJBMVoOkJ4pjjUeMjdYVTehPyQPk3FaKv1VLM_mBFRstz1KOrRXUWKSvEeK1og3yBoZhOS_pk_Adi3Bl6oqNn9ob8nWEM5eDI4nXncPorF60g36lDL-I4LPJPBI0tzqkz7v7FxZXPQbwfu8ysbb9sr8uR_zNa6oRH842P8hVl_7PmrGxRxU_ncU57lsTN481suGwSTQ8rMHj5qzD3fHIYcD6_GvmNeAl5reRpJGJGJKsLwHeSA/file [following]\n",
+            "--2022-05-25 02:22:33--  https://uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com/cd/0/inline2/Bl5vIMbLD2rinnzXnjQVzDPdpEJwzvEddrb05EJH6FyWTgk2LkNxB_XU2G6bwcFg_HAiiAJX2R38bRSIxa62pjEBRtUMSJfctn9UauXff01ZwA6GJhv0tfLWyEvB1SENsxa47IgMpdL8WbBRyJ8WDwWKMyfJaxPwYFk5f9CHv9N8eVcyzJGl4TR22_3lCJBMVoOkJ4pjjUeMjdYVTehPyQPk3FaKv1VLM_mBFRstz1KOrRXUWKSvEeK1og3yBoZhOS_pk_Adi3Bl6oqNn9ob8nWEM5eDI4nXncPorF60g36lDL-I4LPJPBI0tzqkz7v7FxZXPQbwfu8ysbb9sr8uR_zNa6oRH842P8hVl_7PmrGxRxU_ncU57lsTN481suGwSTQ8rMHj5qzD3fHIYcD6_GvmNeAl5reRpJGJGJKsLwHeSA/file\n",
+            "Reusing existing connection to uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com:443.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 63252113 (60M) [application/zip]\n",
             "Saving to: ‘archive.zip’\n",
             "\n",
-            "archive.zip         100%[===================>]  60.32M  21.0MB/s    in 2.9s    \n",
+            "archive.zip         100%[===================>]  60.32M   106MB/s    in 0.6s    \n",
             "\n",
-            "2022-05-24 11:25:22 (21.0 MB/s) - ‘archive.zip’ saved [63252113/63252113]\n",
+            "2022-05-25 02:22:33 (106 MB/s) - ‘archive.zip’ saved [63252113/63252113]\n",
             "\n"
           ]
         }
@@ -100,10 +100,46 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!unzip -q \"/content/archive.zip\""
       ],
       "metadata": {
         "id": "087iz63x0Gg8"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np # linear algebra\n",
+        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "import os\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import tensorflow as tf\n",
+        "import keras\n",
+        "from keras.preprocessing import image\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Conv2D, MaxPool2D, Flatten,Dense,Dropout,BatchNormalization\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "import cv2\n",
+        "from tensorflow.keras.applications import VGG16, InceptionResNetV2\n",
+        "from keras import regularizers\n",
+        "from tensorflow.keras.optimizers import Adam,RMSprop,SGD,Adamax"
+      ],
+      "metadata": {
+        "id": "JvxlKjTjBdJh"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "I4BsaqyLBjB0"
       },
       "execution_count": null,
       "outputs": []
