--- a/Face_Emotion_Recognition.ipynb
+++ b/Face_Emotion_Recognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Face Emotion Recognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjPwvuLQgC1gHZfAneqC+P",
+      "authorship_tag": "ABX9TyPMjj7aREDPYyrvkXge5oDp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U2bDMa-Vyw-q",
-        "outputId": "f2e54755-bd70-43e4-ecd8-35fdfffba95f"
+        "outputId": "d917deb5-56b1-4f67-90a1-e1398cf5d98b"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y-iXEpxaz2Qu",
-        "outputId": "978ca0e5-22b9-471b-e331-751bd869704c"
+        "outputId": "985ca708-f154-4abb-baf5-b4ef0a7799b1"
       },
       "execution_count": 2,
       "outputs": [
@@ -69,29 +69,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-05-25 02:22:32--  https://www.dropbox.com/s/si11cws2pyho1bp/archive.zip\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.9.18, 2620:100:601b:18::a27d:812\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.9.18|:443... connected.\n",
+            "--2022-05-26 03:48:24--  https://www.dropbox.com/s/si11cws2pyho1bp/archive.zip\n",
+            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.5.18, 2620:100:601d:18::a27d:512\n",
+            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.5.18|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: /s/raw/si11cws2pyho1bp/archive.zip [following]\n",
-            "--2022-05-25 02:22:32--  https://www.dropbox.com/s/raw/si11cws2pyho1bp/archive.zip\n",
+            "--2022-05-26 03:48:24--  https://www.dropbox.com/s/raw/si11cws2pyho1bp/archive.zip\n",
             "Reusing existing connection to www.dropbox.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com/cd/0/inline/Bl5xu9VY1Yr8eDGWKTqhCjI6xJV2g2_3Im3ZIBlz4tWMATSSxP8fS9j2Q9wNiwhBOgJ7hqsxOWl_GudDBRtwUWlhlLlmXbiCw_5G4LRWP76gfFCUvr_bP5Bb6afSo23kVN-8DDF1TDDMP65dJ8PeWoK5WQJie5TYn0621IhsgROIUg/file# [following]\n",
-            "--2022-05-25 02:22:32--  https://uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com/cd/0/inline/Bl5xu9VY1Yr8eDGWKTqhCjI6xJV2g2_3Im3ZIBlz4tWMATSSxP8fS9j2Q9wNiwhBOgJ7hqsxOWl_GudDBRtwUWlhlLlmXbiCw_5G4LRWP76gfFCUvr_bP5Bb6afSo23kVN-8DDF1TDDMP65dJ8PeWoK5WQJie5TYn0621IhsgROIUg/file\n",
-            "Resolving uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com (uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com)... 162.125.8.15, 2620:100:601b:15::a27d:80f\n",
-            "Connecting to uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com (uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com)|162.125.8.15|:443... connected.\n",
+            "Location: https://ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com/cd/0/inline/Bl-o_6fCTIG9ziR_grpzLtI0wsxDj4Z8ES0ba8GFaj4WJVxsY2e86v6Em2DlSfu74WRK7Ulwh3Q9KsEjJCpFV8hQqflgPPlAcACbwMnwyYXj_QOAIf09Yqk6eybKJp2iuuZX-enp9hOjJn5yYvPdAfEjygyYvd41FRHINNLI3q9UPg/file# [following]\n",
+            "--2022-05-26 03:48:25--  https://ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com/cd/0/inline/Bl-o_6fCTIG9ziR_grpzLtI0wsxDj4Z8ES0ba8GFaj4WJVxsY2e86v6Em2DlSfu74WRK7Ulwh3Q9KsEjJCpFV8hQqflgPPlAcACbwMnwyYXj_QOAIf09Yqk6eybKJp2iuuZX-enp9hOjJn5yYvPdAfEjygyYvd41FRHINNLI3q9UPg/file\n",
+            "Resolving ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com (ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com)... 162.125.5.15, 2620:100:601d:15::a27d:50f\n",
+            "Connecting to ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com (ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com)|162.125.5.15|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: /cd/0/inline2/Bl5vIMbLD2rinnzXnjQVzDPdpEJwzvEddrb05EJH6FyWTgk2LkNxB_XU2G6bwcFg_HAiiAJX2R38bRSIxa62pjEBRtUMSJfctn9UauXff01ZwA6GJhv0tfLWyEvB1SENsxa47IgMpdL8WbBRyJ8WDwWKMyfJaxPwYFk5f9CHv9N8eVcyzJGl4TR22_3lCJBMVoOkJ4pjjUeMjdYVTehPyQPk3FaKv1VLM_mBFRstz1KOrRXUWKSvEeK1og3yBoZhOS_pk_Adi3Bl6oqNn9ob8nWEM5eDI4nXncPorF60g36lDL-I4LPJPBI0tzqkz7v7FxZXPQbwfu8ysbb9sr8uR_zNa6oRH842P8hVl_7PmrGxRxU_ncU57lsTN481suGwSTQ8rMHj5qzD3fHIYcD6_GvmNeAl5reRpJGJGJKsLwHeSA/file [following]\n",
-            "--2022-05-25 02:22:33--  https://uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com/cd/0/inline2/Bl5vIMbLD2rinnzXnjQVzDPdpEJwzvEddrb05EJH6FyWTgk2LkNxB_XU2G6bwcFg_HAiiAJX2R38bRSIxa62pjEBRtUMSJfctn9UauXff01ZwA6GJhv0tfLWyEvB1SENsxa47IgMpdL8WbBRyJ8WDwWKMyfJaxPwYFk5f9CHv9N8eVcyzJGl4TR22_3lCJBMVoOkJ4pjjUeMjdYVTehPyQPk3FaKv1VLM_mBFRstz1KOrRXUWKSvEeK1og3yBoZhOS_pk_Adi3Bl6oqNn9ob8nWEM5eDI4nXncPorF60g36lDL-I4LPJPBI0tzqkz7v7FxZXPQbwfu8ysbb9sr8uR_zNa6oRH842P8hVl_7PmrGxRxU_ncU57lsTN481suGwSTQ8rMHj5qzD3fHIYcD6_GvmNeAl5reRpJGJGJKsLwHeSA/file\n",
-            "Reusing existing connection to uced8525f4895bf1deaf642da461.dl.dropboxusercontent.com:443.\n",
+            "Location: /cd/0/inline2/Bl8-nX07AqxHWL6AhQ2d0uuxrWnxomEeXUAv1f4Jofg1qJzrPzy4XHMGriUbWJExuUZe8KQzphfPuO_Y2N_hNVcmrbaa7K5nS8g35XPc8gb432G7HMyPlTPQzaLEAYCUPq_V0Lx8lyXEtXh1vicl4rLGEmAZMByIGc29LbqteeOt1IQsSUw-nTzXHX1rRGzjA1oFEHWc3CF1kZvvq3uOYyCdHxUxcrNBv3EMLRsE0E7Tl_4sbeh3Zy7ISJ2H3NuQYtq3S3OwxGA6KRreKZPPRfugpFDb8Tms5VGC57zuisYPxAyjgCqnEmYbAbvIu6eeFpJ1wxyN3XI7bc4brLi_OFu1tuCBWhk7FKnyp9w1Vn_zFK3_HYbtl0UkNh9ZNbbFP1id5mNPFAfvWI1DoktWUXwXnTzEaE22ehCKZVn_0694gA/file [following]\n",
+            "--2022-05-26 03:48:25--  https://ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com/cd/0/inline2/Bl8-nX07AqxHWL6AhQ2d0uuxrWnxomEeXUAv1f4Jofg1qJzrPzy4XHMGriUbWJExuUZe8KQzphfPuO_Y2N_hNVcmrbaa7K5nS8g35XPc8gb432G7HMyPlTPQzaLEAYCUPq_V0Lx8lyXEtXh1vicl4rLGEmAZMByIGc29LbqteeOt1IQsSUw-nTzXHX1rRGzjA1oFEHWc3CF1kZvvq3uOYyCdHxUxcrNBv3EMLRsE0E7Tl_4sbeh3Zy7ISJ2H3NuQYtq3S3OwxGA6KRreKZPPRfugpFDb8Tms5VGC57zuisYPxAyjgCqnEmYbAbvIu6eeFpJ1wxyN3XI7bc4brLi_OFu1tuCBWhk7FKnyp9w1Vn_zFK3_HYbtl0UkNh9ZNbbFP1id5mNPFAfvWI1DoktWUXwXnTzEaE22ehCKZVn_0694gA/file\n",
+            "Reusing existing connection to ucdf63aa0fa42b68518520130250.dl.dropboxusercontent.com:443.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 63252113 (60M) [application/zip]\n",
             "Saving to: ‘archive.zip’\n",
             "\n",
-            "archive.zip         100%[===================>]  60.32M   106MB/s    in 0.6s    \n",
+            "archive.zip         100%[===================>]  60.32M  23.9MB/s    in 2.5s    \n",
             "\n",
-            "2022-05-25 02:22:33 (106 MB/s) - ‘archive.zip’ saved [63252113/63252113]\n",
+            "2022-05-26 03:48:28 (23.9 MB/s) - ‘archive.zip’ saved [63252113/63252113]\n",
             "\n"
           ]
         }
@@ -136,12 +136,24 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "train_dir = \"/content/train\" #passing the path with training images\n",
+        "test_dir = \"/content/test\"   #passing the path with testing images"
       ],
       "metadata": {
         "id": "I4BsaqyLBjB0"
       },
-      "execution_count": null,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img_size = 48 #original size of the image"
+      ],
+      "metadata": {
+        "id": "nf9BWunXe0-h"
+      },
+      "execution_count": 6,
       "outputs": []
     }
   ]
